footer align issue fixed

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,6 +1,9 @@
-mat-toolbar {
+#footer {
   background: #e91e63;
-  clear: both;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
   p {
     font-size: 14px;
     font-weight: 300;
