--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,20 @@
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
-body,html {
+html {
   margin: 0;
   padding: 0;
+  height: 100%;
+  box-sizing: border-box;
+}
+*,*:before,*:after {
+  box-sizing: inherit;
 }
 body{
   background-color: #ebebeb;
   font-family: 'Raleway', sans-serif;
+  position: relative;
+  margin: 0;
+  min-height: 100%;
+  /* padding-bottom: 6rem; */
 }
 a {
   cursor: pointer;
